fix: center alignment for columns in About Us section

--- a/flexbox/9-styles.css
+++ b/flexbox/9-styles.css
@@ -384,7 +384,7 @@
   /* Section ABOUT US
       ============================= */
     .section-about-us [attribute^="col-"]{
-        align-self: flex-end;
+        align-self: center;
     }
       
     
